:bug: Fixed link

--- a/1. 介绍.md
+++ b/1. 介绍.md
@@ -7,9 +7,9 @@
 
 您应该了解一些Rust，并且熟悉JavaScript、HTML和CSS。你不需要成为其中任何一个方面的专家。
 
-不会 Rust 吗? (那么可以从学习这门语言开始)[https://www.rust-lang.org/zh-CN/]
+不会 Rust 吗? [那么可以从学习这门语言开始](https://www.rust-lang.org/zh-CN/)
 
-不会 Javascript, HTML, or CSS? (在 MDN 学习它们)[https://developer.mozilla.org/zh-CN/docs/Learn]
+不会 Javascript, HTML, or CSS? [在 MDN 学习它们](https://developer.mozilla.org/zh-CN/docs/Learn)
 
 ## 如何阅读这本书
 
