--- a/4. 教程/4.2Hello, World!.md
+++ b/4. 教程/4.2Hello, World!.md
@@ -206,3 +206,81 @@ import * as wasm from "hello-wasm-pack";
 
 wasm.greet();
 ```
+
+## 安装依赖
+
+首先，通过在 `wasm-game-of-life/www` 子目录中运行 `npm install`，确保安装了本地开发服务器及其依赖项：
+
+```
+npm install
+```
+
+此命令只需运行一次，将会安装 webpack JavaScript 依赖及其开发服务器。
+
+> 请注意，Rust 和 WebAssembly 并不依赖 `webpack`，它只是我们为方便起见选择的绑定器和开发服务器。Parcel and Rollup 还应支持将 WebAssembly 作为 ECMAScript 模块导入。如果您愿意，也可以使用不带捆绑程序的 `Rust` 和`WebAssembly`！
+
+## 在 `www` 上使用我们本地的 `wasm-game-of-life` 包
+
+我们不想使用npm的 `hello-wasm-pack`，而是想使用我们本地的 `wasm-game-of-life` 包。
+这将允许我们逐步发展我们程序。
+
+打开文件 `wasm-game-of-life/www/package.json` 找到其中的 `"dependencies"` 字段，把 `"wasm-game-of-life": "file:../pkg"` 加到里面：
+
+```json
+{
+  // ...
+  "dependencies": {                     // Add this three lines block!
+    "wasm-game-of-life": "file:../pkg"
+  },
+  "devDependencies": {
+    //...
+  }
+}
+```
+
+然后引入 `wasm-game-of-life` 到文件 `wasm-game-of-life/www/index.js` 里面，而不是 `hello-wasm-pack` 包：
+
+```javascript
+import * as wasm from "wasm-game-of-life";
+
+wasm.greet();
+```
+
+既然我们新增了依赖，那我们就需要更新一下：
+```
+npm install
+```
+
+接着，我们的网页现在可以在本地运行了！
+
+## 在本地运行
+
+接下来，为开发服务器打开一个新终端。
+在一个新的终端上运行服务器可以让它在后台运行，同时不会阻止我们运行其他命令。
+在新终端中，从 `wasm-game-of-life/www` 目录中运行以下命令：
+```
+npm run start
+```
+打开浏览器进入 [http://localhost:8080](http://localhost:8080)，将会出现弹窗警告信息。
+
+![alert message](../image/4.1hello-world.png)
+
+更改之后，如果希望出现在 [http://localhost:8080](http://localhost:8080)，就需要在 `wasm-game-of-life` 目录下重新运行一下命令 `wasm-pack build`
+
+## 练习
+
+- 我们可以修改 `wasm-game-of-life/src/lib.rs` 里面的函数 `greet`，使用 `name: &str` 参数使弹窗信息可以自定义，把你的名字传给 `wasm-game-of-life/www/index.js` 中的 `greet` 函数。用 `wasm-pack build` 重新生成.wasm 二进制文件，然后在浏览器重新打开 [http://localhost:8080](http://localhost:8080) ，将会出现自定义的弹窗警告信息。
+
+### Answer
+
+将新的函数 `greet` 写在 `wasm-game-of-life/src/lib.rs`：
+```rust
+#[wasm_bindgen]
+pub fn greet(name: &str) {
+    alert(&format!("Hello, {}!", name));
+}
+```
+可以使用调用方式
+```javascript
+wasm.greet("Name");
+```
