--- a/4. 教程/4.2Hello, World!.md
+++ b/4. 教程/4.2Hello, World!.md
@@ -269,9 +269,9 @@ npm run start
 
 ## 练习
 
-- 我们可以修改 `wasm-game-of-life/src/lib.rs` 里面的函数 `greet`，使用 `name: &str` 参数使弹窗信息可以自定义，把你的名字传给 `wasm-game-of-life/www/index.js` 中的 `greet` 函数。用 `wasm-pack build` 重新生成.wasm 二进制文件，然后在浏览器重新打开 [http://localhost:8080](http://localhost:8080) ，将会出现自定义的弹窗警告信息。
+我们可以修改 `wasm-game-of-life/src/lib.rs` 里面的函数 `greet`，使用 `name: &str` 参数使弹窗信息可以自定义，把你的名字传给 `wasm-game-of-life/www/index.js` 中的 `greet` 函数。用 `wasm-pack build` 重新生成.wasm 二进制文件，然后在浏览器重新打开 [http://localhost:8080](http://localhost:8080) ，将会出现自定义的弹窗警告信息。
 
-### Answer
+### 答案
 
 将新的函数 `greet` 写在 `wasm-game-of-life/src/lib.rs`：
 ```rust
