:bug: Correct docs

--- a/4. 教程/4.1安装.md
+++ b/4. 教程/4.1安装.md
@@ -4,7 +4,7 @@
 ## Rust 的工具
 您将需要标准的Rust工具链，包括 `rustup`、`rustc` 和 `cargo`。
 
-[按照以下说明安装防锈工具链。](https://www.rust-lang.org/zh-CN/tools/install)
+[按照以下说明安装 Rust 工具链。](https://www.rust-lang.org/zh-CN/tools/install)
 
 Rust 和 WebAssembly 只需要安装稳定版，不需要安装实验版。不过，我们需要安装 Rust 1.30 或以上的版本。
 
