:bug: Correct docs

--- a/4. 教程/4.2Hello, World!.md
+++ b/4. 教程/4.2Hello, World!.md
@@ -18,7 +18,7 @@ wasm-game-of-life
 ```
 
 ## 里面的内容
-Enter the new `wasm-game-of-life` project
+输入命令进入新创建的项目 `wasm-game-of-life`：
 ```
 cd wasm-game-of-life
 ```
