:books: Add notes

--- a/4. 教程/4.1安装.md
+++ b/4. 教程/4.1安装.md
@@ -32,3 +32,6 @@ cargo install cargo-generate
 ```bash
 npm install npm@latest -g
 ```
+
+> 如果安装不上，可参考文章 [Rust语言中文社区
+：国内网络环境下配置 wasm 开发环境](https://rustcc.cn/article?id=65f61fbe-c6bd-42d5-bbfe-4e6f6d04d0b1) 
