--- a/4. 教程/4.4实现游戏.md
+++ b/4. 教程/4.4实现游戏.md
@@ -15,9 +15,10 @@
 
 ### 设计 Rust 和 JavaScript 的接口
 
-> ⚡ 这是一个最重要的概念，了解了可以忽略本教程！
+> ⚡ 这是本教程中最重要的概念之一!
 
-JavaScript 的垃圾收集堆（在这里分配对象、数组和DOM节点）不同于 WebAssembly 的线性内存空间，在这里我们的 trust 值存在。WebAssembly 目前无法直接访问垃圾收集堆（截至2018年4月，这一点预计将随“接口类型”建议而改变）。另一方面，JavaScript 可以读写 WebAssembly 线性内存空间，但只能作为标量值（`u8`、`i32`、`f64`等）的`ArrayBuffer`。WebAssembly 函数还获取并返回标量值。这些是构成所有 WebAssembly 和 JavaScript 通信的构建块。
+JavaScript 的垃圾收集堆（在这里分配`Object`、`Array`和 `DOM`）不同于 WebAssembly 的线性内存空间，在这里我们的 trust 值存在。WebAssembly 目前无法直接访问垃圾收集堆（截至2018年4月，这一点预计将随[“接口类型”建议](https://github.com/WebAssembly/interface-types/blob/master/proposals/interface-types/Explainer.md)而改变）。
+另一方面，JavaScript 可以读写 WebAssembly 线性内存空间，但只能作为标量值（`u8`、`i32`、`f64`等）的`ArrayBuffer`。WebAssembly 函数还获取并返回标量值。这些是构成所有 WebAssembly 和 JavaScript 通信的构建块。
 
 `wasm_bindgen` 定义了如何跨此边界处理复合结构的共同理解。
 它包括封装的 Rust structures，将指针封装到 JavaScript 类中以获得可用性，或者从 Rust 索引到 JavaScript 对象表中。
@@ -30,3 +31,237 @@ JavaScript 的垃圾收集堆（在这里分配对象、数组和DOM节点）不
 
 一般来说，一个好的 JavaScript↔WebAssembly 接口设计通常是将大型、长寿命的数据结构实现为驻留在 WebAssembly 线性内存中的 Rust 类型，并将其作为不透明操作开放给JavaScript。
 JavaScript 调用导出的 WebAssembly 函数，这些函数接受这些不透明的操作，转换它们的数据，执行繁重的计算，查询数据，最终返回一个小的、可复制的结果。通过只返回较小的计算结果，我们可以避免在 JavaScript 垃圾收集堆和 WebAssembly 线性内存之间来回复制和/或序列化所有内容。
+
+### 在游戏中连接 Rust 和 JavaScript
+
+让我们先列举一些要避免的危险。我们不想把整个宇宙都复制到 WebAssembly 的线性内存中。我们不想为宇宙中的每个单元分配对象，也不想对每个单元进行读写的跨边界调用。
+
+这给我们留下了什么? 我们可以将 Universe 表示为，位于 WebAssembly 线性内存中的平面数组，并且每个单元格都有一个字节。 0是一个死单元格，1是一个活单元格。
+
+在内存中，4x4的宇宙是这样的：
+
+![universe](../images/4.4universe.png)
+
+要在 Universe 的给定行和列中，查找单元格的数组索引，我们可以使用以下公式:
+
+```rust
+index(row, column, universe) = row * width(universe) + column
+```
+
+我们有几种方法可以将 Universe 的单元格暴露给 JavaScript。 首先，我们为`Universe` 添加 [`std::fmt::Display`](https://doc.rust-lang.org/1.25.0/std/fmt/trait.Display.html) 实现，可以用来产生 一个单元格的 Rust `String` ，渲染为文本字符。 然后将此 Rust `String` 从 WebAssembly 线性内存复制到 JavaScript 的垃圾收集堆中 的 JavaScript `String` 中，然后通过设置HTML的 textContent 显示。 在本章的后面，我们将推演这个实现，以避免在堆之间复制 Universe 的单元格，和渲染到 `<canvas>`。
+
+## Rust 实现
+
+在上一章中，我们克隆了一个初始项目模板. 我们现在将修改该项目模板.
+
+让我们开始删除 `wasm-game-of-life/src/lib.rs` 的 `alert`导入 和 `greet` 函数，并用单元格的类型定义替换它们:
+
+```rust
+#[wasm_bindgen]
+#[repr(u8)]
+#[derive(Clone, Copy, Debug, PartialEq, Eq)]
+pub enum Cell {
+    Dead = 0,
+    Alive = 1,
+}
+```
+
+重要的是我们拥有 `#[repr(u8)]` ，以便每个单元格表示为单个字节。 同样重要的是 `Dead` 代表 `0`，那个 `Alive` 是 `1`，这样我们就可以轻松地计算一个单元格的活邻居。
+
+接下来，让我们定义宇宙(Universe)。 宇宙具有宽度和高度，以及长度为 `width * height` 的单元格向量。
+
+```rust
+#[wasm_bindgen]
+pub struct Universe {
+    width: u32,
+    height: u32,
+    cells: Vec<Cell>,
+}
+```
+
+要访问给定行和列的单元格，我们将行和列转换为单元格向量的索引，如前所述：
+
+```rust
+#![allow(unused_variables)]
+impl Universe {
+    fn get_index(&self, row: u32, column: u32) -> usize {
+        (row * self.width + column) as usize
+    }
+
+    // ...
+}
+```
+
+为了计算一个细胞的下一个状态，我们需要计算它的邻居中有多少人还活着。
+我们需要写一个实时计数邻居的函数。
+
+```rust
+#![allow(unused_variables)]
+impl Universe {
+    // ...
+
+    fn live_neighbor_count(&self, row: u32, column: u32) -> u8 {
+        let mut count = 0;
+        for delta_row in [self.height - 1, 0, 1].iter().cloned() {
+            for delta_col in [self.width - 1, 0, 1].iter().cloned() {
+                if delta_row == 0 && delta_col == 0 {
+                    continue;
+                }
+
+                let neighbor_row = (row + delta_row) % self.height;
+                let neighbor_col = (column + delta_col) % self.width;
+                let idx = self.get_index(neighbor_row, neighbor_col);
+                count += self.cells[idx] as u8;
+            }
+        }
+        count
+    }
+}
+```
+
+`live_neighbor_count` 方法使用增量和取模来避免宇宙的边缘情况。
+当应用 -1 的增量时，我们添加 `self.height - 1`，然后让取模做它的事，而不是尝试减去1。
+row 和 column 可以为0，如果尝试从中减去1，则会出现无符号整数下溢。
+
+现在我们有了从现在的计算下一代所需的一切！游戏的每一条规则都遵循一个简单的转换为 `match` 表达式上的条件。
+
+另外，因为我们希望 JavaScript 控制触发 `tick`，所以我们将把这个方法放在 `#[wasm#u bindgen]` 块中，这样它就可以开放给JavaScript。
+
+```rust
+/// 公共方法，开放给 JavaScript。
+#[wasm_bindgen]
+impl Universe {
+    pub fn tick(&mut self) {
+        let mut next = self.cells.clone();
+
+        for row in 0..self.height {
+            for col in 0..self.width {
+                let idx = self.get_index(row, col);
+                let cell = self.cells[idx];
+                let live_neighbors = self.live_neighbor_count(row, col);
+
+                let next_cell = match (cell, live_neighbors) {
+                    // 规则 1: 任何少于两个邻居的活细胞死亡，就好像是由于人口不足造成的一样。.
+                    (Cell::Alive, x) if x < 2 => Cell::Dead,
+                    // 规则 2: 任何一个有两个或三个邻居的活体细胞都能传到下一代。.
+                    (Cell::Alive, 2) | (Cell::Alive, 3) => Cell::Alive,
+                    // 规则 3: 任何居住着三个以上邻居的活细胞都会死亡，就好像是由于人口过剩。.
+                    (Cell::Alive, x) if x > 3 => Cell::Dead,
+                    // 规则 4:任何一个只有三个相邻的活细胞的死细胞都会变成活细胞，就像通过繁殖一样。.
+                    (Cell::Dead, 3) => Cell::Alive,
+                    // 所有其他单元格保持相同状态。
+                    (otherwise, _) => otherwise,
+                };
+
+                next[idx] = next_cell;
+            }
+        }
+
+        self.cells = next;
+    }
+
+    // ...
+}
+```
+
+到目前为止，宇宙的状态被表示为一个细胞向量。为了使其具有可读性，让我们实现一个基本的文本呈现器。这个想法是把宇宙一行一行地写成文本，对于每个活着的细胞，打印Unicode字符◼ ("黑色中方形“）。对于死细胞，我们会打印出来◻ (“白色中等正方形”）。
+
+通过实现Rust标准库中的 [`Display`](https://doc.rust-lang.org/1.25.0/std/fmt/trait.Display.html) 特性，我们可以添加一种以面向用户的方式格式化结构的方法。这也将自动为我们提供一个 [`to_string`](https://doc.rust-lang.org/1.25.0/std/string/trait.ToString.html) 方法。
+
+```rust
+use std::fmt;
+
+impl fmt::Display for Universe {
+    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
+        for line in self.cells.as_slice().chunks(self.width as usize) {
+            for &cell in line {
+                let symbol = if cell == Cell::Dead { '◻' } else { '◼' };
+                write!(f, "{}", symbol)?;
+            }
+            write!(f, "\n")?;
+        }
+
+        Ok(())
+    }
+}
+```
+
+最后，我们定义了一个构造函数，它用一个有趣的活细胞和死细胞模式以及一个呈现方法来初始化宇宙：
+
+```rust
+#[wasm_bindgen]
+impl Universe {
+    // ...
+
+    pub fn new() -> Universe {
+        let width = 64;
+        let height = 64;
+
+        let cells = (0..width * height)
+            .map(|i| {
+                if i % 2 == 0 || i % 7 == 0 {
+                    Cell::Alive
+                } else {
+                    Cell::Dead
+                }
+            })
+            .collect();
+
+        Universe {
+            width,
+            height,
+            cells,
+        }
+    }
+
+    pub fn render(&self) -> String {
+        self.to_string()
+    }
+}
+```
+
+有了它，我们游戏的一半实现就完成了！
+在 `wasm-game-of-life` 目录下运行 `wasm-pack build` ，将其重新编译到 WebAssembly。
+
+## 使用 JavaScript 进行渲染
+
+首先，让我们在 `wasm-game-of-life/www/index.html` 中添加一个 `<pre>` 元素，将宇宙渲染到 `<script>` 标记的正上方：
+
+```html
+<body>
+  <pre id="game-of-life-canvas"></pre>
+  <script src="./bootstrap.js"></script>
+</body>
+```
+
+另外，我们希望 `<pre>` 集中在网页的中间。我们可以使用 CSS flex-box 来实现。
+在 `wasm-game-of-life/www/index.html` 的 `<head>` 中添加以下 `<style>` 标记：
+
+```html
+<style>
+  body {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+</style>
+```
+
+在 `wasm-game-of-life/www/index.js` 的前几行，我们导入 `Universe` 将原来的 `greet` 函数替换：
+
+```javascript
+import { Universe } from "wasm-game-of-life";
+```
+
+接着，我们将获取刚刚添加的 `<pre>` 元素，并实例化一个新的 `Universe`：
+
+```javascript
+const pre = document.getElementById("game-of-life-canvas");
+const universe = Universe.new();
+```
