:zap: Update layout

--- a/4. 教程/4.3规则.md
+++ b/4. 教程/4.3规则.md
@@ -31,17 +31,10 @@
 
 从这些简单而确定的规则中，奇怪而令人兴奋的行为出现了：
 
-#### `戈斯珀滑翔机枪`
+| 戈斯珀滑翔机枪 | 脉冲星 | 太空船 |
+| ----------- | ------ | ---- |
+| ![戈斯珀滑翔机枪](../images/4.3Gospers_glider_gun.gif) | ![脉冲星](../images/4.3Game_of_life_pulsar.gif) | ![太空船](../images/4.3Game_of_life_animated_LWSS.gif) |
 
-![戈斯珀滑翔机枪](../images/4.3Gospers_glider_gun.gif)
-
-#### 脉冲星
-
-![脉冲星](../images/4.3Game_of_life_pulsar.gif)
-
-#### 太空船
-
-![太空船](../images/4.3Game_of_life_animated_LWSS.gif)
 
 ## 视频
 
@@ -50,15 +43,19 @@
 
 ## 练习
 
-- 手工计算我们示例宇宙的下一个滴答声。注意到熟悉的东西了吗？
+- 手工计算我们示例宇宙的下一个 `tick`。注意到熟悉的东西了吗？
+    <details>
+        <summary>答案</summary>
+  
+    ![初始宇宙](../images/4.3initial-universe.png)
 
-### 答案
-它应该是示例宇宙的初始状态：
-![初始宇宙](../images/4.3initial-universe.png)
+    这种模式是周期性的：每两次 `tick` 之后，它就会返回到初始状态。
+    </details>
 
-这种模式是周期性的：每两次滴答声之后，它就会返回到初始状态。
 
 - 你能找到一个稳定的初始宇宙吗？也就是说，宇宙中每一代人都是一样的。
 
-### 答案
-有无数稳定的宇宙！平凡稳定的宇宙就是空的宇宙。一个二乘二平方的活细胞也是一个稳定的宇宙。
+    <details>
+        <summary>答案</summary>
+        有无数稳定的宇宙！平凡稳定的宇宙就是空的宇宙。一个二乘二平方的活细胞也是一个稳定的宇宙。
+    </details>
