:art: Update docs

--- a/4. 教程/4.10发布到npm.md
+++ b/4. 教程/4.10发布到npm.md
@@ -6,7 +6,7 @@
 
 第一，[确保你拥有一个 npm 账号](https://www.npmjs.com/signup) 。
 
-其次，通过运行此命令，确保您在本地登录到您的帐户:
+其次，通过运行此命令，确保你在本地登录到你的帐户:
 ```bash
 wasm-pack login
 ```
@@ -29,7 +29,7 @@ wasm-pack publish
 
 ...除非，其他人也在做这个教程，所以 `wasm-game-of-life` 名字会在 npm 重叠，以致于最后一个命令不起作用。
 
-打开 `wasm-game-of-life/Cargo.toml`，并将您的用户名添加到 `name`，用个人的方式消除包歧义：
+打开 `wasm-game-of-life/Cargo.toml`，并将你的用户名添加到 `name`，用个人的方式消除包歧义：
 
 ```toml
 [package]
