--- a/4. 教程/4.1安装.md
+++ b/4. 教程/4.1安装.md
@@ -1,8 +1,8 @@
 # 安装
-本节介绍如何设置工具链，将Rust程序编译到WebAssembly，并将它们集成到JavaScript中。
+本节介绍如何设置工具链，将 Rust 程序编译到 WebAssembly，并将它们集成到 JavaScript 中。
 
 ## Rust 的工具
-您将需要标准的Rust工具链，包括 `rustup`、`rustc` 和 `cargo`。
+你将需要标准的Rust工具链，包括 `rustup`、`rustc` 和 `cargo`。
 
 [按照以下说明安装 Rust 工具链。](https://www.rust-lang.org/zh-CN/tools/install)
 
@@ -15,7 +15,7 @@ wasm-pack是构建、测试和发布生成的 WebAssembly 的一站式服务。
 
 ### `cargo-generate`
 
-[`cargo-generate` 通过利用已有的git存储库作为模板，帮助您快速启动并运行一个新的 Rust 项目。](https://github.com/cargo-generate/cargo-generate)
+[`cargo-generate` 通过利用已有的git存储库作为模板，帮助你快速启动并运行一个新的 Rust 项目。](https://github.com/cargo-generate/cargo-generate)
 
 安装 `cargo-generate` 的命令：
 ```bash
