--- a/4. 教程/4.2Hello, World!.md
+++ b/4. 教程/4.2Hello, World!.md
@@ -1,18 +1,18 @@
 # Hello, World!
 
-本节将向您展示如何构建和运行您的第一个 Rust 和 WebAssembly 程序：一个警告“Hello，World！”
+本节将向你展示如何构建和运行你的第一个 Rust 和 WebAssembly 程序：一个警告“Hello，World！”
 
 开始之前，请确保已按照安装说明进行操作。
 
 ## 克隆项目模板
-项目模板预先配置了 sane 默认值，因此您可以快速构建、集成和打包Web代码。
+项目模板预先配置了 sane 默认值，因此你可以快速构建、集成和打包Web代码。
 
 使用以下命令克隆项目模板：
 ```bash
 cargo generate --git https://github.com/rustwasm/wasm-pack-template
 ```
 
-这将提示您输入新项目的名称。我们将使用 **"wasm-game-of-life"**。
+这将提示你输入新项目的名称。我们将使用 **"wasm-game-of-life"**。
 ```
 wasm-game-of-life
 ```
@@ -218,7 +218,7 @@ npm install
 
 此命令只需运行一次，将会安装 webpack JavaScript 依赖及其开发服务器。
 
-> 请注意，Rust 和 WebAssembly 并不依赖 `webpack`，它只是我们为方便起见选择的绑定器和开发服务器。Parcel and Rollup 还应支持将 WebAssembly 作为 ECMAScript 模块导入。如果您愿意，也可以使用不带捆绑程序的 `Rust` 和`WebAssembly`！
+> 请注意，Rust 和 WebAssembly 并不依赖 `webpack`，它只是我们为方便起见选择的绑定器和开发服务器。Parcel and Rollup 还应支持将 WebAssembly 作为 ECMAScript 模块导入。如果你愿意，也可以使用不带捆绑程序的 `Rust` 和`WebAssembly`！
 
 ## 在 `www` 上使用我们本地的 `wasm-game-of-life` 包
 
