--- a/4. 教程/4.4实现游戏.md
+++ b/4. 教程/4.4实现游戏.md
@@ -458,8 +458,8 @@ npm run start
 [hashlife(暂无中文)](https://en.wikipedia.org/wiki/Hashlife)
 。
 它使用积极的内存，实际上可以得到指数更快的计算后代运行时间越长！
-有鉴于此，您可能想知道为什么我们没有在本教程中实现 hashlife。
-这超出了本文的范围，我们将重点讨论Rust和WebAssembly集成，但我们强烈建议您自己去学习 hashlife！
+有鉴于此，你可能想知道为什么我们没有在本教程中实现 hashlife。
+这超出了本文的范围，我们将重点讨论Rust和WebAssembly集成，但我们强烈建议你自己去学习 hashlife！
 
 ## 练习
 - 用一艘宇宙飞船初始化宇宙。
@@ -501,7 +501,7 @@ npm run start
     <details>
         <summary>答案</summary>
         
-    在 Rust 中，您可以使用 
+    在 Rust 中，你可以使用 
     [`fixedbitset crate` 和它的 `FixedBitSet` 类型](https://crates.io/crates/fixedbitset)
     ，来表示单元格，代替Vec<Cell>:
   
@@ -553,7 +553,7 @@ npm run start
     });
     ```
 
-    要将指向开头位的指针传递给 JavaScript，您可以转换 FixedBitSe t到切片，然后将切片转换为指针:
+    要将指向开头位的指针传递给 JavaScript，你可以转换 FixedBitSe t到切片，然后将切片转换为指针:
     ```rust
     #[wasm_bindgen]
     impl Universe {
