--- a/4. 教程/4.5测试.md
+++ b/4. 教程/4.5测试.md
@@ -56,7 +56,7 @@ impl Universe {
 
 现在我们要在 `wasm_game_of_life/tests/web.rs` 文件中创建我们的测试。
 
-在我们这样做之前,文件中已经有一个工作测试。您可以通过在 `wasm-game-of-life` 目录里面，运行 `wasm-pack test --chrome --headless` 确认 Rust 生成的 WebAssembly 测试是否正常工作。你也可以使用 `--firefox`，`--safari`，和 `--node` 在这些浏览器中测试代码的选项。
+在我们这样做之前,文件中已经有一个工作测试。你可以通过在 `wasm-game-of-life` 目录里面，运行 `wasm-pack test --chrome --headless` 确认 Rust 生成的 WebAssembly 测试是否正常工作。你也可以使用 `--firefox`，`--safari`，和 `--node` 在这些浏览器中测试代码的选项。
 
 在 `wasm_game_of_life/tests/web.rs` 文件中，我们需要导入 `wasm_game_of_life` crate 和 `Universe` 类型。
 
