--- a/4. 教程/4.8时间分析.md
+++ b/4. 教程/4.8时间分析.md
@@ -139,7 +139,7 @@ let _timer = Timer::new("Universe::tick");
 ## 扩大我们的游戏世界
 
 > ⚠️ 本节使用Firefox的示例屏幕截图。虽然所有现代浏览器都有类似的工具，但使用不同的开发人员工具可能会有细微差别。
-> 您提取的概要信息在本质上是相同的，但是您的里程数可能因您看到的视图和不同工具的命名而有所不同。
+> 你提取的概要信息在本质上是相同的，但是你的里程数可能因你看到的视图和不同工具的命名而有所不同。
 
 如果我们游戏宇宙变得更大会发生什么？
 将 64x64 的宇宙替换为 128x128 的宇宙（通过修改 `wasm-game-of-life/src/lib.rs` 中的 `Universe::new`）会导致在我的机器上FPS从平滑的 60 下降到起伏的 40。
@@ -150,7 +150,7 @@ let _timer = Timer::new("Universe::tick");
 
 如果我们看一下单个动画帧中发生的情况，就会发现 `CanvasRenderingContext2D.fillStyle` setter 运行开销非常昂贵！
 
-> 在Firefox中，如果您看到一行仅仅显示“DOM”而不是上面提到的 `CanvasRenderingContext2D.fillStyle`，您可能需要在 `performance developer tools` 选项中打开“Show Gecko Platform Data”选项：
+> 在Firefox中，如果你看到一行仅仅显示“DOM”而不是上面提到的 `CanvasRenderingContext2D.fillStyle`，你可能需要在 `performance developer tools` 选项中打开“Show Gecko Platform Data”选项：
 >
 > ![profiler-firefox-show-gecko-platform](../images/4.8profiler-firefox-show-gecko-platform.png)
 
@@ -163,7 +163,7 @@ let _timer = Timer::new("Universe::tick");
 我们将近 40％ 的时间花在了这个 setter 上！
 
 > ⚡ 我们可能会想这个 `tick` 方法是性能瓶颈，但事实并非如此。
-> 要让分析引导您的注意力，不然时间可能花在您不期望的地方。
+> 要让分析引导你的注意力，不然时间可能花在你不期望的地方。
 
 `wasm-game-of-life/www/index.js` 的 `drawCells` 函数里面，对每次动画帧，Universe 中的每个单元格都设置一次 `fillStyle` 属性：
 
