--- a/4. 教程/4.9减少.wasm尺寸.md
+++ b/4. 教程/4.9减少.wasm尺寸.md
@@ -31,7 +31,7 @@ $ gzip -9 < pkg/wasm_game_of_life_bg.wasm | wc -c
 - 使用该 `wasm-snip` 工具从我们的游戏中的 `.wasm` 二进制文件，删除 `panic!` 基础设施函数，它节省了多少字节？
 
 
-- 建立我们的 游戏 crate，有没有 `wee_alloc` 作为其全局分配器。我们克隆的 `rustwasm/wasm-pack-template` 模板，有个 “wee_alloc”Cargo 特性，您可以在 `wasm-game-of-life/Cargo.toml` 中的 `[features]` 部分添加，default 字段，启动该特性：
+- 建立我们的 游戏 crate，有没有 `wee_alloc` 作为其全局分配器。我们克隆的 `rustwasm/wasm-pack-template` 模板，有个 “wee_alloc”Cargo 特性，可以在 `wasm-game-of-life/Cargo.toml` 中的 `[features]` 部分添加，default 字段，启动该特性：
     ```toml
     [features]
     default = ["wee_alloc"]
