--- a/5. 参考/5.10在生产环境中部署Rust和WebAssembly.md
+++ b/5. 参考/5.10在生产环境中部署Rust和WebAssembly.md
@@ -4,7 +4,7 @@
 
 要在客户机上部署使用 Rust 生成的 WebAssembly 的 Web 应用程序，请将生成的 Web 应用程序的文件复制到生产服务器的文件系统，并配置HTTP服务器以使其可访问。
 
-## 确保您的HTTP服务器使用 `application/wasm` MIME 类型
+## 确保你的HTTP服务器使用 `application/wasm` MIME 类型
 
 为了获得最快的页面加载速度，你需要使用 [`WebAssembly.instantiateStreaming` 函数](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/instantiateStreaming) 通过网络传输将 wasm 编译和实例化流水线化（或者确保捆绑程序能够使用该函数）。
 但是，`instantiateStreaming` 要求 HTTP 响应设置 [`application/wasm` MIME 类型](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Basics_of_HTTP/MIME_types) ，否则它将抛出错误。
