--- a/5. 参考/5.1你应该知道的crates.md
+++ b/5. 参考/5.1你应该知道的crates.md
@@ -2,7 +2,7 @@
 
 这是一个精选的 crate 列表，关于 Rust 和 WebAssembly 开发。
 
-[您还可以浏览 WebAssembly 类别中发布到 crates.io 的所有 crate。](https://crates.io/categories/wasm)
+[你还可以浏览 WebAssembly 类别中发布到 crates.io 的所有 crate。](https://crates.io/categories/wasm)
 
 
 ## 与 JavaScript 和 DOM 交互
