--- a/5. 参考/5.2你应该知道的工具.md
+++ b/5. 参考/5.2你应该知道的工具.md
@@ -7,7 +7,7 @@
 ### `wasm-pack` | [repository](https://github.com/rustwasm/wasm-pack)
 
 `wasm-pack` 是成为一个一站式的构建和使用 Rust 生成的 WebAssembly 库，使你可以在 Web上 或 Node.js 上与 JavaScript 进行互操作。
-`wasm-pack` 帮助你构建并将生成的 WebAssembly 发布到 npm 注册表，以便与您已经使用的工作流中的任何其他 JavaScript 包一起使用。
+`wasm-pack` 帮助你构建并将生成的 WebAssembly 发布到 npm 注册表，以便与你已经使用的工作流中的任何其他 JavaScript 包一起使用。
 
 
 ## 优化和操作 `.wasm` 二进制文件
@@ -31,9 +31,9 @@
 垃圾收集 WebAssembly 模块并删除所有不需要的导出、导入、函数等的小工具。
 这实际上是 WebAssembly 的 `--gc-sections` 链接器标志。
 
-您通常不需要自己使用此工具，因为有两个原因：
+你通常不需要自己使用此工具，因为有两个原因：
 
-1. rustc现在有了足够新的 lld 版本，它支持 WebAssembly 的 `--gc-sections` 标志。这将自动为LTO生成启用。
+1. `rustc` 现在有了足够新的 lld 版本，它支持 WebAssembly 的 `--gc-sections` 标志。这将自动为LTO生成启用。
 2. `wasm-bindgen` CLI 工具会自动运行 `wasm-gc`。
 
 
