--- a/5. 参考/5.3项目模版.md
+++ b/5. 参考/5.3项目模版.md
@@ -1,6 +1,6 @@
 ## 项目模版
 
-Rust 和 WebAssembly工 作组负责管理和维护各种项目模板，以帮助您启动新项目并开始运行。
+Rust 和 WebAssembly工 作组负责管理和维护各种项目模板，以帮助你启动新项目并开始运行。
 
 
 ## `wasm-pack-template`
