--- a/5. 参考/5.4调试.md
+++ b/5. 参考/5.4调试.md
@@ -92,9 +92,9 @@ pub fn init_panic_hook() {
 
 如果 bug 不涉及与 JavaScript 或 webapi 的交互，那么尝试将其复制为一个普通的 Rust `#[test]` 函数，在调试时可以利用本地成熟的工具。
 使用像 [`quickcheck`](https://crates.io/crates/quickcheck) 这样的测试 crate 和它的测试用例 shrinkers 来机械地减少测试用例。
-最终，如果您可以将 bug 隔离在一个不需要与 JavaScript 交互的较小的测试用例中，那么您将更容易找到和修复 bug。
+最终，如果你可以将 bug 隔离在一个不需要与 JavaScript 交互的较小的测试用例中，那么你将更容易找到和修复 bug。
 
-请注意，为了在没有编译器和链接器错误的情况下运行本机 `#[test]`，您需要确保 `Cargo.toml` 文件的 `[lib.cratet type]` 数组中包含 `“rlib”`。
+请注意，为了在没有编译器和链接器错误的情况下运行本机 `#[test]`，你需要确保 `Cargo.toml` 文件的 `[lib.cratet type]` 数组中包含 `“rlib”`。
 
 ```toml
 [lib]
