:sparkles: Add hexo

--- a/source/_posts/4. 教程/4.2Hello, World!.md
+++ b/source/_posts/4. 教程/4.2Hello, World!.md
@@ -264,7 +264,7 @@ npm run start
 ```
 打开浏览器进入 [http://localhost:8080](http://localhost:8080)，将会出现弹窗警告信息。
 
-![alert message](../images/4.1hello-world.png)
+![alert message](source/_posts/images/4.1hello-world.png)
 
 更改之后，如果希望出现在 [http://localhost:8080](http://localhost:8080)，就需要在 `wasm-game-of-life` 目录下重新运行一下命令 `wasm-pack build`
 
