--- a/source/_posts/4. 教程/4.6调试.md
+++ b/source/_posts/4. 教程/4.6调试.md
@@ -93,7 +93,7 @@ const renderLoop = () => {
 
 这为我们提供了一个方便的检查点，用于检查记录的消息，并将当前呈现的帧与前一帧进行比较。
 
-![debugging](../images/4.6debugging.png)
+![debugging](source/_posts/imagesosts/images/4.6debugging.png)
 
 ## 练习
 
