--- a/source/_posts/5. 参考/5.9怎么为一个通用crate添加WebAssembly支持.md
+++ b/source/_posts/5. 参考/5.9怎么为一个通用crate添加WebAssembly支持.md
@@ -5,7 +5,7 @@
 
 ## 也许你的 crate 已经支持 WebAssembly 了！
 
-查看关于什么样的东西可以使通用 [crate 不能用于 WebAssembly 的信息](./5.8可以与WebAssembly一起使用的crates.md) 。
+查看关于什么样的东西可以使通用 [crate 不能用于 WebAssembly 的信息](source/_posts/5. 参考/5.8可以与WebAssembly一起使用的crates.md) 。
 如果你的 crate 没有这些东西，它可能已经支持 WebAssembly 了！
 
 可以通过运行 WebAssembly 目标的 `cargo build 进行检查：
