--- a/source/_posts/4. 教程/4.3规则.md
+++ b/source/_posts/4. 教程/4.3规则.md
@@ -15,7 +15,7 @@
 
 考虑以下为初始宇宙：
 
-![初始宇宙](../images/4.3initial-universe.png)
+![初始宇宙](source/_posts/imagesosts/images/4.3initial-universe.png)
 
 我们可以通过考虑每个细胞来计算下一代。左上角的牢房死了。规则（4）是唯一适用于死细胞的转换规则。但是，因为左上角的单元格没有正好三个活动的邻居，所以转换规则不适用，并且在下一代中它仍然是死的。第一行的其他单元格也是如此。
 
@@ -27,13 +27,13 @@
 
 把它们放在一起，我们在下一个滴答声之后得到这个宇宙：
 
-![下一个宇宙](../images/4.3next-universe.png)
+![下一个宇宙](source/_posts/imagesosts/images/4.3next-universe.png)
 
 从这些简单而确定的规则中，奇怪而令人兴奋的行为出现了：
 
 | 戈斯珀滑翔机枪 | 脉冲星 | 太空船 |
 | ----------- | ------ | ---- |
-| ![戈斯珀滑翔机枪](../images/4.3Gospers_glider_gun.gif) | ![脉冲星](../images/4.3Game_of_life_pulsar.gif) | ![太空船](../images/4.3Game_of_life_animated_LWSS.gif) |
+| ![戈斯珀滑翔机枪](source/_posts/imagesosts/images/4.3Gospers_glider_gun.gif) | ![脉冲星](source/_posts/imagesosts/images/4.3Game_of_life_pulsar.gif) | ![太空船](source/_posts/imagesosts/images/4.3Game_of_life_animated_LWSS.gif) |
 
 
 ## 视频
@@ -47,7 +47,7 @@
     <details>
         <summary>答案</summary>
   
-    ![初始宇宙](../images/4.3initial-universe.png)
+    ![初始宇宙](source/_posts/imagesosts/images/4.3initial-universe.png)
 
     这种模式是周期性的：每两次 `tick` 之后，它就会返回到初始状态。
     </details>
