--- a/source/_posts/5. 参考/5.5时间分析.md
+++ b/source/_posts/5. 参考/5.5时间分析.md
@@ -42,7 +42,7 @@ fn now() -> f64 {
 
 请注意，这些分析器不会显示内联函数，而且由于 Rust 和 LLVM 非常依赖内联，因此结果可能仍然有点令人费解。
 
-![profiler-with-rust-names](../images/5.5profiler-with-rust-names.png)
+![profiler-with-rust-names](source/_posts/imagesosts/images/5.5profiler-with-rust-names.png)
 
 #### 参考
 
@@ -64,11 +64,11 @@ fn now() -> f64 {
 
 以下是浏览器控制台中 `console.time` 日志的屏幕截图：
 
-![console-time](../images/5.5console-time.png)
+![console-time](source/_posts/imagesosts/images/5.5console-time.png)
 
 此外，`console.time` 和 `console.timeEnd` 日志将显示在浏览器分析器的 “时间线” 或 “瀑布” 视图中：
 
-![console-time-in-profiler](../images/5.5console-time-in-profiler.png)
+![console-time-in-profiler](source/_posts/imagesosts/images/5.5console-time-in-profiler.png)
 
 ### 使用原生代码 `#[bench]`
 
