:sparkles: Update theme

--- a/source/_posts/4. 教程/4.7添加交互性.md
+++ b/source/_posts/4. 教程/4.7添加交互性.md
@@ -113,8 +113,7 @@ impl Universe {
 
 这个方法是在 `impl` 中定义的，`impl` 用 `#[wasm#u bindgen]` 注释，以便JavaScript调用它。
 
-在 `wasm-game-of-life/www/index.js` 中我们会监听 `<canvas>` 的点击事件，
-将 `click` 事件的相对坐标转换为画布相对坐标，然后转换为行和列，调用 `toggle_cell` 方法，最后重绘场景。
+在 `wasm-game-of-life/www/index.js` 中我们会监听 `<canvas>` 的点击事件，将 `click` 事件的相对坐标转换为画布相对坐标，然后转换为行和列，调用 `toggle_cell` 方法，最后重绘场景。
 
 ```javascript
 canvas.addEventListener('click', event => {
